--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     와 벌써..내가 졸업이라니...마지막 종강..브이로그 편집 겨우함ㅎㅎㅎ
                     다들 졸업하거나 유예.휴학일텐뎅 벌써 우리가..취업을...
                 </p>
-                <h2>내가 졸업이라니! 종강 브아로그</h2>
+                <h2>내가 졸업이라니! 종강 브이로그</h2>
             </div>
         </section>
         <section>            
@@ -52,7 +52,7 @@
                     와 벌써..내가 졸업이라니...마지막 종강..브이로그 편집 겨우함ㅎㅎㅎ
                     다들 졸업하거나 유예.휴학일텐뎅 벌써 우리가..취업을...
                 </p>
-                <h2>내가 졸업이라니! 종강 브아로그</h2>
+                <h2>내가 졸업이라니! 종강 브이로그</h2>
             </div>
         </section>
         <section>            
@@ -63,7 +63,7 @@
                     와 벌써..내가 졸업이라니...마지막 종강..브이로그 편집 겨우함ㅎㅎㅎ
                     다들 졸업하거나 유예.휴학일텐뎅 벌써 우리가..취업을...
                 </p>
-                <h2>내가 졸업이라니! 종강 브아로그</h2>
+                <h2>내가 졸업이라니! 종강 브이로그</h2>
             </div>
         </section>
     </div>
